<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imgLogo"
                android:scaleType="center"
                app:srcCompat="@mipmap/logo"/>

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textColor="@color/secondary"
                android:text="@string/txtTitle_2"/>

            <TextView
                android:id="@+id/txtRolle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtRolle"
                android:textAlignment="center"
                android:layout_marginTop="12dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/btnPatient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnPatient"
                android:layout_marginTop="12dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@color/secondary"/>

            <Button
                android:id="@+id/btnLe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnLe"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@color/secondary"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>