<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtPatientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16sp"
            android:text="@string/txtPatientName_2"
            android:textColor="@color/secondary"
            android:textSize="24sp"
            android:layout_gravity="center_vertical|left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:background="@color/white"
            android:layout_gravity="center_vertical|right"
            app:srcCompat="@drawable/ic_baseline_format_list_bulleted_24"
            android:contentDescription="@string/btnSettings" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:text="@string/txtTitle_3"
        android:textColor="@color/secondary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <ListView
            android:id="@+id/lstGoals"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24sp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        android:contentDescription="@string/btnNew_2" />

    <LinearLayout
        android:id="@+id/viewSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/tertiary"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        app:srcCompat="@android:drawable/menu_frame">

        <Button
            android:id="@+id/btnSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/white"
            android:textAllCaps="false"
            android:text="@string/btnSummary"
            android:textColor="@color/secondary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnPatientData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/white"
            android:textAllCaps="false"
            android:text="@string/btnPatientData"
            android:textColor="@color/secondary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnAddDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/white"
            android:textAllCaps="false"
            android:text="@string/btnAddDevice"
            android:textColor="@color/secondary"
            android:textSize="16sp" />
        <Button
            android:id="@+id/btnCreatePatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/white"
            android:text="@string/btnCreatePatient"
            android:textAllCaps="false"
            android:textColor="@color/secondary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnFHIRServerSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/white"
            android:text="@string/btnFHIRServerSettings"
            android:textAllCaps="false"
            android:textColor="@color/secondary"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
